--- a/docs/05/S05.01.intro-docker-compose.md
+++ b/docs/05/S05.01.intro-docker-compose.md
@@ -1,22 +1,25 @@
+# Docker compose
+
 - [Docker compose](#docker-compose)
   - [Au menu](#au-menu)
 
-# Docker compose
-
 ## Au menu
 
-Faire tourner plusieurs containers avec docker composer a partir d'un fichier `compose.yaml`
+Faire tourner plusieurs containers en meme temps avec `docker compose` à partir d'un fichier `compose.yaml`
 
 - overview docker compose
-- cas d'utilisation et benefices
+- cas d'utilisation et bénéfices
 - elements du `compose.yaml`: services, network, volumes
 - commandes CLI et flags
+
+puis
+
 - demo : nginx, sqlite, vue
-- exercice : wordpress, postgresql: ecrire le compose.yaml et le faire tourner
+- exercice : wordpress, PostgreSQL: écrire le compose.yaml et le faire tourner
 - suite: déploiement, secrets, config, restart
 - exemples: Minecraft, airflow,
+- exemples: config local
 - integration dans un pipeline CI/CD
 - projet : bot discord
 
-
-Mais tout d'abord un récapitulatif rapide de ce que l'on a vu lors des premières session ; les Dockerfiles
+Mais tout d'abord un récapitulatif rapide de ce que l'on a vu lors des premières session : les Dockerfiles
