--- a/docs/05/S05.02.recap-j1-j2.md
+++ b/docs/05/S05.02.recap-j1-j2.md
@@ -1,30 +1,38 @@
-# Recap J1 et J2
+# Recap J1 et J2: dockerfiles
+
+- [Recap J1 et J2: dockerfiles](#recap-j1-et-j2-dockerfiles)
+  - [Images et Containers](#images-et-containers)
+  - [Dockerfile](#dockerfile)
+  - [Gestion des containers](#gestion-des-containers)
+  - [Docker hub](#docker-hub)
+
 
 ## Images et Containers
 
 Une image est un fichier executable composé de
 
 - un OS
-- configurations
-- installations
-- commandes
+- configurations de l'environnement
+- installations de librairies
+- execution de commandes
 
-Un container est une instance de l'image, une execution particulière de l'image.
+Un **container** est une **instance** de l'**image**, une execution particulière de l'image.
 
 ## Dockerfile
 
-Pour une application donnée, on crée un ou plusieurs fichier Dockerfile qui spécifie les étapes de création de l'image.
+Pour une application donnée, on crée un ou plusieurs fichier `Dockerfile` qui spécifie(nt) les étapes de création de l'image.
 
-La convention est de mettre le Dockerfile a la racine du projet.
+La convention est de mettre le `Dockerfile` à la racine du projet.
 
 Le Dockerfile est composé des éléments suivants:
 
-- FROM: chargement de l/image de base le plus souvent constituée d'un OS ou d'un OS et d'un package de base (python, Nginx, etc ) ou d'une image propriétaire
-- Installations de packages et librairies avec RUN suivi du manager de package de l'OS
-- COPY des fichiers locaux
-- Creations des volumes soient liés au host (Bind Mounts) soit internes a Docker
+- **FROM**: chargement de l'image de base le plus souvent constituée d'un OS ou d'un OS combiné à un package de base (python, Nginx, etc ) ou encore d'une image propriétaire
+
+- Installations de packages et librairies avec **RUN** suivi du manager de package de l'OS
+- **COPY** des fichiers locaux de développement
+- Créations des volumes soient liés au host (Bind Mounts), soit internes a Docker
 - Gestions des secrets et variables d'environnements (ENV)
-- Lancement de la commanded principale : CMD ou ENTRYPOINT
+- Lancement de la commande principale qui est exécutée au démarrage du container : CMD ou ENTRYPOINT
 
 et quelques autres commandes pour affiner la configuration
 
@@ -36,6 +44,9 @@ On a vu comment
 - lister les containers actifs ou non : `docker ps` et `docker ps -a`
 - Accéder à un container : `docker exec -it` ou `docker attach`
 - stopper | supprimer un container: `docker stop | rm`
+- supprimer une image: `docker stop | rmi`
+- supprimer toutes les images et containers 'dangling' (en l'air): `docker system prune -f`
+
 
 Ainsi que la suite de flags qu'ils faut prendre en compte pour faire tourner un container
 
@@ -47,6 +58,8 @@ Ainsi que la suite de flags qu'ils faut prendre en compte pour faire tourner un 
 - `--name` : nommer le container
 
 et quelques autres.
+
+Au final, une bonne partie de la complexité de la config du container est reléguée au niveau de la ligne de commande avec l'utilisation de nombreux flags
 
 ## Docker hub
 
