--- a/docs/05/S05.03.Docker-Compose.md
+++ b/docs/05/S05.03.Docker-Compose.md
@@ -8,7 +8,7 @@ Docker Compose (V2) consiste en
 
 - **Compose file**: un fichier yaml de definition et de gestion des services (volumes et et réseaux) qui définit intégralement l'application.
   - Le fichier est `compose.yaml`.
-  - on peut aussi utiliser `docker-compose.yaml` mais c'est un nom lié a la version 1 de Docker Compose.
+  - on peut aussi utiliser `docker-compose.yaml` mais c'est un nom lié à la version 1 de Docker Compose.
 - **Compose CLI**: une série de commandes pour démarrer, stopper, surveiller (log et status des services) etc l'application
 
 Docker Compose est tres adapté pour l'intégration continue (CI/CD).
@@ -17,19 +17,21 @@ Exemples d'applications
 
 - un site Wordpress adossé à une base de donnée Mysql
 - Une application NGinx + Redis pour le cache
-- Un stack machine learning avec MLops, Aiflow, ...
+- Un stack machine learning avec MLops, Airflow, ...
 - Un LLM en local avec Ollama et une interface web
 
 ## Pourquoi ?
 
-Docker Compose  permet de définir et de gérer des applications multi-conteneurs dans **un seul fichier** YAML. C'est puissant!
+Docker Compose  permet de définir et de gérer des applications multi-conteneurs à partue d'**un seul fichier** YAML.
+
+C'est puissant!!!
 
 - simplifier la tâche complexe d'orchestration et de coordination de divers services,
 - faciliter la gestion et la réplication de votre environnement applicatif.
 
-- En développement : docker compose remplace plusieurs page de "getting started" en un seul fichier "machine readable" et quelques commandes.
-- Pour les tests: docker compose  permet de créer et supprimer tout un environnement de test avec quelques ligne de commandes
-- pour la production: l'organisation de la mise en production des briques applicatives est entièrement automatisée
+- En **développement** : docker compose remplace plusieurs page de "getting started" en un seul fichier "machine readable" et quelques commandes.
+- Pour les **tests**: docker compose permet de créer et de supprimer tout un environnement de test avec quelques ligne de commandes
+- pour la **production**: l'organisation de la mise en production des briques applicatives est entièrement automatisée
 
 Spécifier tout une application à partir d'un unique fichier permet aussi le contrôle des versions. Le `compose.yaml` est dans git.
 
@@ -37,48 +39,47 @@ Spécifier tout une application à partir d'un unique fichier permet aussi le co
 
 ## Structure et éléments du fichier compose.yaml
 
-<https://claude.ai/chat/bb5fa692-b972-4e35-b85d-c21e68ec1e00>
 
-The `compose.yaml` file (or `docker-compose.yml` for older versions) is typically placed at the root of your project directory. It uses YAML syntax to define the configuration.
+Le fichier `compose.yaml` (ou `docker-compose.yml` pour les versions plus anciennes) est  placé à la racine de votre répertoire de projet.
 
-Let's start with the core concepts, file structure, and main elements of a `compose.yaml` file:
+Structure du fichier et les éléments principaux d'un fichier `compose.yaml` :
 
-a. Version: (optionel)
+a. Version : (optionnel)(obsolete)
 
-- Specifies the Compose file format version.
-- Example: `version: '3.8'`
+- Spécifie la version du format du fichier Compose.
+- Exemple : `version: '3.8'`
 
-b. Services:
+b. Services :
 
-- Defines the containers that should be run.
-- Each service is given a name and can have various configuration options.
+- Définit les conteneurs qui doivent être exécutés.
+- Chaque service reçoit un nom et peut avoir diverses options de configuration.
 
-c. Networks:
+Par exemple: postgres, nginx, worker, appel a api, cache,  etc ....
 
-- Defines the networks to be created for communication between containers.
+c. Réseaux (Networks) :
 
-d. Volumes:
+- Définit les réseaux à créer pour la communication entre les conteneurs.
 
-- Defines named volumes that can be reused across multiple services.
+d. Volumes :
 
-Here's a basic structure of a `compose.yaml` file:
+- Définit les volumes nommés qui peuvent être réutilisés par plusieurs services.
+
+Voici la structure de base d'un fichier `compose.yaml` :
 
 ```yaml
-version: '3.8'
-
 services:
   service1:
-    # configuration for service1
+    # configuration pour service1
   service2:
-    # configuration for service2
+    # configuration pour service2
 
 networks:
   network1:
-    # configuration for network1
+    # configuration pour network1
 
 volumes:
   volume1:
-    # configuration for volume1
+    # configuration pour volume1
 ```
 
 ### Illustration
@@ -87,14 +88,18 @@ volumes:
 
 2. Une application Python/FastAPI application <https://github.com/docker/awesome-compose/tree/master/fastapi>
 
+C'est simple et très puissant
+
 ### CLI de base: `up`, `down`, `logs`, `ps`
 
-- To start all the services defined in your compose.yaml file: `docker compose up`
-- To stop and remove the running services: `docker compose down`
-- If you want to monitor the output of your running containers and debug issues, you can view the logs with: `docker compose logs`
-- To lists all the services along with their current status: `docker compose ps`
 
-Liste complète des commandes: <https://docs.docker.com/reference/cli/docker/compose/>
+- Pour **démarrer** tous les services définis dans votre fichier compose.yaml : `docker compose up`
+- Pour **arrêter** et supprimer les services en cours d'exécution : `docker compose down`
+- Si vous souhaitez surveiller la sortie de vos conteneurs en cours d'exécution et débugger des problèmes, on affiche les logs avec : `docker compose logs`
+- Pour lister tous les services  : `docker compose ps`
+
+
+La liste complète des commandes est ici : <https://docs.docker.com/reference/cli/docker/compose/>
 
 | Command | Description |
 |------------------------|---------------------|
@@ -124,41 +129,33 @@ Liste complète des commandes: <https://docs.docker.com/reference/cli/docker/com
 
 #### Flags
 
-- `--dry-run`  Execute command in dry run mode
-- `--env-file`  Specify an alternate environment file
-- `-f`, `--file`  Compose configuration files
+Voici la traduction en français :
+
+- `--dry-run` Exécute la commande en mode simulation
+- `--env-file` Spécifie un fichier d'environnement alternatif
+- `-f`, `--file` Fichiers de configuration Compose
 
 et
 
-- `--all-resources`  Include all resources, even those not used by services
-- `--ansi` auto Control when to print ANSI control characters ("never"|"always"|"auto")
-- `--compatibility`  Run compose in backward compatibility mode
-- `--parallel -1` Control max parallelism, -1 for unlimited
-- `--profile`  Specify a profile to enable
-- `--progress` auto Set type of progress output (auto, tty, plain, json, quiet)
-- `--project-directory`  Specify an alternate working directory (default: the path of the, first specified, Compose file)
-- `-p`, --project-name  Project name
-
-### Version
-
-The version field is optional in recent Docker Compose versions but can be useful for compatibility. It specifies the Compose file format version.
-
-Example:
-
-```yaml
-version: '3.8'
-```
+- `--all-resources` Inclut toutes les ressources, même celles non utilisées par les services
+- `--ansi` Contrôle quand imprimer les caractères de contrôle ANSI ("never"|"always"|"auto")
+- `--compatibility` Exécute compose en mode de compatibilité descendante
+- `--parallel -1` Contrôle le parallélisme maximal, -1 pour illimité
+- `--profile` Spécifie un profil à activer
+- `--progress` Définit le type de sortie de progression (auto, tty, plain, json, quiet)
+- `--project-directory` Spécifie un répertoire de travail alternatif (par défaut : le chemin du premier fichier Compose spécifié)
+- `-p`, `--project-name` Nom du projet
 
 ### Services
 
-La partie la plus importante qui définie les containers de l'application.
+C'est la partie la plus importante, où sont définis les containers de l'application.
 
-Chaque service correspond à un container.
+A chaque service correspond un container.
 
 Principales options de configuration d'un service:
 
-a) `image`: L'image Docker a utilise (si on ne build pas l'image )
-b) `build`: le chemin vers le Dockerfile (si on utilise pas une image déja existante )
+a) `image`: L'image Docker a utiliser (si on ne build pas l'image )
+b) `build`: Le chemin vers le Dockerfile (si on utilise pas une image déjà existante )
 c) `ports`: Mapping des ports du host vers le container
 d) `volumes`: Mounts paths or named volumes.
 e) `environment`: Sets environment variables.
@@ -187,17 +184,20 @@ services:
       - db-data:/var/lib/postgresql/data
 ```
 
+On retrouve là, la plupart des flags utilisés en ligne de commande pour run un container!
+
 ### Volumes
 
-Volumes are used for persisting data generated by and used by Docker containers.
+Voici la traduction en français :
 
-Key configuration options include:
+Les volumes sont utilisés pour conserver les données générées et utilisées par les conteneurs Docker.
+Les options de configuration principales comprennent :
 
-a) `driver`: Specifies the volume driver to use.
-b) `driver_opts`: Provides driver-specific options.
-c) `external`: Specifies if the volume has been created outside Compose.
+a) `driver` : Spécifie le pilote de volume à utiliser.
+b) `driver_opts` : Fournit des options spécifiques au pilote.
+c) `external` : Spécifie si le volume a été créé en dehors de Compose.
 
-Example:
+#### Exemple:
 
 ```yaml
 volumes:
@@ -209,15 +209,15 @@ volumes:
 
 ### Networks
 
-Networks define how containers communicate with each other and the outside world.
+Voici la traduction en français :
 
-Key configuration options include:
+Les réseaux définissent comment les conteneurs communiquent entre eux et avec le monde extérieur.
+Les options de configuration principales comprennent :
+a) `driver` : Spécifie le pilote réseau à utiliser.
+b) `driver_opts` : Fournit des options spécifiques au pilote.
+c) `ipam` : Personnalise la gestion des adresses IP.
 
-a) `driver`: Specifies the network driver to use.
-b) `driver_opts`: Provides driver-specific options.
-c) `ipam`: Customizes IP address management.
-
-Example:
+#### Par exemple :
 
 ```yaml
 networks:
