--- a/docs/05/S05.suite.md
+++ b/docs/05/S05.suite.md
@@ -16,7 +16,7 @@ g) restart: Defines the restart policy.
 
 Dans l'exemple precedent on est partie des images disponibles sur docker hub.
 
-On peut aussi construire une des image necessaires a l'appliccation avec un Dockerfile
+On peut aussi construire une des image nécessaires a l'application avec un Dockerfile
 
 Dans ce cas on utilise `build` a la place de `image` pour le service concerné
 
@@ -307,11 +307,7 @@ ipam:
 
 Using IPAM and specifying IPs can be very useful for scenarios where you need predictable addressing, but it does require more manual management. In many cases, letting Docker handle IP assignment automatically is simpler and sufficient.
 
-## Named volumes vs Bind Mounts
-
-Alright, I'll cover all of those aspects for you. Let's dive into each topic:
-
-1. Pros and Cons of Named Volumes vs. Bind Mounts
+## Pros and Cons of Named Volumes vs. Bind Mounts
 
 Named Volumes:
 Pros:
