--- a/docs/06/S06.01.discord-bot.md
+++ b/docs/06/S06.01.discord-bot.md
@@ -1,40 +1,26 @@
 - [Discord bot](#discord-bot)
-  - [Les etapes](#les-etapes)
-    - [Local](#local)
-    - [Deployer sur une VM](#deployer-sur-une-vm)
-    - [Add linting](#add-linting)
-    - [Multi stage build](#multi-stage-build)
+  - [Les étapes de creation du bot](#les-étapes-de-creation-du-bot)
+    - [1) Local](#1-local)
+    - [2) Déployer sur une VM](#2-déployer-sur-une-vm)
+    - [3) Ajouter le linting](#3-ajouter-le-linting)
   - [Demo du bot](#demo-du-bot)
 - [Le bot](#le-bot)
   - [Créer votre bot sur le portail Discord](#créer-votre-bot-sur-le-portail-discord)
     - [le DISCORD\_TOKEN](#le-discord_token)
     - [L'environnement local](#lenvironnement-local)
-  - [2. Set up your Python environment](#2-set-up-your-python-environment)
-  - [3. Write the Bot Code](#3-write-the-bot-code)
-  - [4. Run the Bot](#4-run-the-bot)
-  - [5. Invite the Bot to Your Server](#5-invite-the-bot-to-your-server)
-  - [6. Expanding Bot Functionality](#6-expanding-bot-functionality)
-- [Integrating Discord Bot with Docker and GitHub Actions](#integrating-discord-bot-with-docker-and-github-actions)
-  - [Part 1: Docker Integration](#part-1-docker-integration)
-    - [Docker Compose even with a single service](#docker-compose-even-with-a-single-service)
+    - [Le bot dans main.py](#le-bot-dans-mainpy)
+    - [A vous](#a-vous)
+      - [Le Dockerfile](#le-dockerfile)
+      - [Le compose.yaml](#le-composeyaml)
+    - [Inviter le bot sur le server discord](#inviter-le-bot-sur-le-server-discord)
+    - [ajouter des fonctinonalités](#ajouter-des-fonctinonalités)
     - [Other services that could be useful for a more complex bot](#other-services-that-could-be-useful-for-a-more-complex-bot)
+    - [Multi stage builds](#multi-stage-builds)
   - [GitHub Actions Setup](#github-actions-setup)
   - [validate, lint, test Dockerfile and compose.yaml](#validate-lint-test-dockerfile-and-composeyaml)
     - [Then deploy to host](#then-deploy-to-host)
   - [Running Locally with Docker](#running-locally-with-docker)
 
-
-## chats
-
-<https://claude.ai/chat/22f0774e-cabd-42af-8507-572cae0f4004>
-
-
-## Illustrate
-- multi stage build in Dockerfile : from alpine install python ...
-- Github secrets
-- deploy with github actions
-- linting dockerfiles docker compose and python
-- push the image to docker hub first and use it in github actions
 
 
 # Discord bot
@@ -43,35 +29,44 @@ Le plan de l'après midi: construire un bot Discord
 
 D'abord en local, puis dans le cloud
 
-## Les etapes
+ce qui nous permettra d'illustrer et de pratiquer les points suivant
 
-### Local
+- multi stage build dans Dockerfile : from alpine install python ...
+- Gestion des *secrets* avec Github secrets
+- Déploiement  with github actions (CI/CD)
+- Lint : comment améliorer la qualité de son code, appliqué aux dockerfiles compose.yaml et python
+- plusieurs stratégies pour déployer une image docker (avec ou sans docker hub).
+
+
+
+## Les étapes de creation du bot
+
+### 1) Local
+
 1. créer une application dans Discord Developer Portal, ouvrir un compte, remplir des pages web. facile
-2. prendre les fichiers suivants dans la repo github : src/main.py,
-3. écrire un Dockerfile
-4. écrire un compose.yaml pour docker compose
+2. prendre le script python dans la repo github : `main.py`
+3. écrire un `Dockerfile`
+4. écrire un `compose.yaml` pour docker compose
 
 Lancer le bot avec `docker compose up -d`
 
 Jouer avec le bot!
 
-### Deployer sur une VM
-- créer une repo github avec le code du bot et un readme
-- prendre le fichier deploy.yml sur le github
-- comprendre deploy.yml: deploy, ssh keys
-- ajouter les secrets dans github
-- push to master => et voir le deploiement
-- jouer avec le bot!
+### 2) Déployer sur une VM
 
-### Add linting
+- créer une repo github avec le code python du bot et un `readme.md`
+- prendre le fichier `deploy.yml` sur le github
+  - comprendre `deploy.yml`: deploy, ssh keys
+  - ajouter les secrets dans github
+- push to master => et voir le déploiement
+
+Jouer avec le bot!
+
+### 3) Ajouter le linting
 
 Le linting ?
 
-Ajouter des étapes de Linting / validation des fichiers dockerfile, compose.yaml et python
-
-### Multi stage build
-On peut optimiser le docker file avec un build multi stage
-Le multi stage build consiste à supprimer les fichiers qui ont ete crées lors des installs pour réduire la tialle finale de l'image et du container
+Ajouter des étapes de Linting et de validation des fichiers dockerfile, compose.yaml et python
 
 
 ## Demo du bot
@@ -119,36 +114,117 @@ Gérer le token pour qu'il reste secret et que le fichier `.env` ne soit pas cop
 
 Nous n'avons pas besoin d'installer python puisque nous avons docker!
 
-Mais nous avons quand meme besoin de
+Mais nous avons quand meme besoin du script python du bot : `main.py`
 
-1) le script python du bot : `main.py`
-2) le fichier requirements.txt pour installer la librairie discord.py
+récupérez le depuis https://github.com/SkatAI/ynov-docker/blob/master/apps/discord-bot/src/main.py
 
-Allez récupérer les fichiers `main/py` et `requirements.txt` dans le github du cours
+Par convention on met les fichiers python dans un sous repertoire `src`.
 
+Dans un fichier `requirements.txt` ajoutez la ligne
 
-
-
-
-## 2. Set up your Python environment
-
-1. Install Python (if not already installed)
-2. Install the discord.py library:
-   ```
-   pip install discord.py
-   ```
-
-## 3. Write the Bot Code
-
-
-## 4. Run the Bot
-
-Save the code in a file (e.g., `bot.py`) and run it:
-```
-python bot.py
+```txt
+discord.py==2.3.2
 ```
 
-## 5. Invite the Bot to Your Server
+Le contenu de votre repertoire projet `discord-bot` doit ressembler à
+
+```bash
+.
+├── .env
+├── requirements.txt
+└── src
+    └── main.py
+
+2 directories, 3 files
+```
+
+### Le bot dans main.py
+
+
+Dans le fichier main.py
+
+une seule commande : `/hello`
+
+[TODO] commenter et proposer des autres commandes
+
+### A vous
+
+Vous allez maintenant écrire les fichier suivants
+
+- le `Dockerfile` qui permet de construire votre image et de runner le container
+- le `compose.yaml` qui permet lancer le bot avec `docker compose up`
+- le `.dockerignore` pour éviter que `.env` ne se retrouve dans le container
+
+#### Le Dockerfile
+
+Un Dockerfile classique
+
+le plus simple est
+
+- de partir de l'image `python:3.12-slim`
+- le workdir est '/app'
+- de copier le requirements.txt et d'installer les librairies avec `pip install`
+- de copier le code `main.py`
+- et de l'executer avec `python main.py` de préference avec une syntaxe **Exec** (définit la commande et ses arguments sous forme d'array)
+
+
+#### Le compose.yaml
+
+
+Pourquoi un docker compose.yaml alors qu'il n'y a qu'un service ?
+
+* Gestion des variables d'environnement
+  - Dans votre cas, Docker Compose fournit un moyen propre d'injecter la variable d'environnement `DISCORD_TOKEN`.
+  - Vous pouvez utiliser un fichier `.env` avec Compose automatiquement, alors qu'avec Docker seul, vous devriez les spécifier en ligne de commande ou utiliser `--env-file`.
+
+* Commandes standardisées
+  - Au lieu de se souvenir des commandes Docker build/run avec tous leurs paramètres, vous pouvez utiliser :
+
+ ```bash
+ docker compose up --build    # Construire et démarrer
+ docker compose down         # Arrêter et supprimer les conteneurs
+ ```
+
+* Scalabilité future
+  - Si vous décidez plus tard d'ajouter d'autres services (comme une base de données ou un cache), vous n'aurez pas besoin de refactorer.
+  - Il suffit d'ajouter de nouveaux services dans le même fichier compose.
+
+* Développement local
+  - Compose propose des commandes comme `docker compose logs` et `docker compose restart` qui sont plus pratiques que leurs équivalents Docker.
+  - Cela facilite également le partage de la configuration du projet avec d'autres développeurs.
+
+Donc ecrivez un compose.yaml avec
+
+- un seul service appelé `discord-bot`
+- construit à partir du Dockerfile (et qui ne part pas d'une image)
+- avec les volumes adéquats
+- et la variable d'environnement `DISCORD_TOKEN`
+
+
+La commande suivante permet de vérifier que le fichier est bien écrit
+
+```bash
+docker compose -f compose.yaml config
+```
+
+Lorsque vous exécutez `docker compose -f compose.yaml config`, Docker Compose :
+
+- Analyse le fichier et vérifie la syntaxe et la structure.
+- Valide les services, volumes, réseaux, et configurations.
+- Combine les configurations si plusieurs fichiers Compose sont utilisés.
+- Affiche la configuration finale.
+
+En cas d'erreur (syntaxe, champs manquants, configurations non prises en charge), la commande les signalera. En résumé, cette commande valide le fichier et affiche la configuration finale, en indiquant les éventuelles erreurs.
+
+Et vous pouvez bien entendu lancer le bot avec
+
+```bash
+docker compose up
+```
+
+### Inviter le bot sur le server discord
+
+Pour que le bot devienne actif, il faut l'autoriser  et l'inviter
 
 1. Go back to the Discord Developer Portal
 2. Go to the "OAuth2" tab, then "URL Generator"
@@ -159,117 +235,17 @@ python bot.py
 
 Your bot should now be running and connected to your Discord server!
 
-## 6. Expanding Bot Functionality
+[TODO] verifier que le student peut ajouter le bot au server!
 
-You can add more commands by creating new functions with the `@bot.command()` decorator. For example:
+1216407543622926357
 
-```python
-@bot.command(name='roll')
-async def roll(ctx, dice: str):
-    """Rolls a dice in NdN format."""
-    try:
-        rolls, limit = map(int, dice.split('d'))
-    except Exception:
-        await ctx.send('Format has to be in NdN!')
-        return
-
-    result = ', '.join(str(random.randint(1, limit)) for r in range(rolls))
-    await ctx.send(result)
-```
-
-This adds a `!roll` command that simulates rolling dice.
+https://discord.com/api/oauth2/authorize?client_id=BOT_CLIENT_ID&permissions=PERMISSIONS_NUMBER&scope=bot
 
 
+### ajouter des fonctinonalités
 
-# Integrating Discord Bot with Docker and GitHub Actions
+A ce stade vous pouvez ajouter toutes les fonctionnalités que vous souhaitez
 
-## Part 1: Docker Integration
-
-1. Create a Dockerfile in your project root:
-
-```Dockerfile
-# Use an official Python runtime as the base image
-FROM python:3.9-slim
-
-# Set the working directory in the container
-WORKDIR /app
-
-# Copy the requirements file into the container
-COPY requirements.txt .
-
-# Install the required packages
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy the bot code into the container
-COPY bot.py .
-
-# Run the bot when the container launches
-CMD ["python", "bot.py"]
-```
-
-2. Create a `requirements.txt` file:
-
-```
-discord.py==2.3.2
-```
-
-3. Create a `docker-compose.yml` file:
-
-```yaml
-version: '3'
-services:
-  discord-bot:
-    build: .
-    environment:
-      - DISCORD_TOKEN=${DISCORD_TOKEN}
-```
-
-4. Update your `bot.py` to use environment variables:
-
-```python
-import os
-import discord
-from discord.ext import commands
-
-TOKEN = os.getenv('DISCORD_TOKEN')
-
-# ... rest of your bot code ...
-
-bot.run(TOKEN)
-```
-
-
-### Docker Compose even with a single service
-
-Let me explain the benefits of using Docker Compose even with a single service:
-
-1. Environment Variable Management
-   - In your case, Docker Compose provides a clean way to inject the `DISCORD_TOKEN` environment variable
-   - You can use a `.env` file with Compose automatically, whereas with plain Docker you'd need to specify them in the command line or use `--env-file`
-
-2. Standardized Commands
-   - Instead of remembering Docker build/run commands with all their parameters, you can use:
-   ```bash
-   docker compose up --build    # Build and start
-   docker compose down         # Stop and remove containers
-   ```
-
-3. Future Scalability
-   - If you later decide to add more services (like a database or cache), you won't need to refactor
-   - Just add new services to the same compose file
-
-4. Local Development
-   - Compose provides commands like `docker compose logs` and `docker compose restart` that are more convenient than their Docker equivalents
-   - Makes it easier to share the project setup with other developers
-
-However, for your specific case with just a Discord bot, you could technically use plain Docker commands:
-
-```bash
-docker build -t discord-bot .
-docker run -e DISCORD_TOKEN=your_token discord-bot
-```
-
-The choice to use Compose here is more about standardization and future-proofing than immediate technical necessity. If you're certain the project will remain single-service, using plain Docker commands would be equally valid.
 
 ### Other services that could be useful for a more complex bot
 
@@ -396,14 +372,23 @@ Additional services you might consider depending on your bot's features:
       - "15672:15672"
 ```
 
-Remember to:
+### Multi stage builds
 
-1. Only add services you actually need
-2. Consider the resource usage on your host machine
-3. Implement proper security measures (especially if exposing ports)
-4. Use environment variables for sensitive data
-5. Set up proper logging and monitoring
+https://chatgpt.com/c/671a7937-6e50-800e-a00a-6680e74eecbe
 
+https://claude.ai/chat/d57aecc0-d6db-4e12-96ba-a76174503025
+
+On peut optimiser le docker file avec un build multi stage.
+
+Le multi stage build consiste à supprimer les fichiers qui ont été crées lors des installs pour réduire la taille finale de l'image et du container.
+
+
+Voici ce que ca donnerait pour notre Dockerfile
+
+```yaml
+```
+
+Mais il est assez evident que dans notre cas assez simple, le gain de taille obtenu avec un build multi stage est assez limité.
 
 ## GitHub Actions Setup
 
@@ -623,3 +608,4 @@ Or use Docker Compose:
 ```bash
 DISCORD_TOKEN=your_token_here docker-compose up
 ```
+
